tests/resource/valid/class/assign_types_double_nested.mamba
class Y(def a: Float)

class X
    def y: Y

    def init(self, a: Float) =>
         self.y := Y(a)

def x := X(10)

x.y.a := x.y.a + 2
x.y.a := x.y.a - 3
x.y.a := x.y.a * 6

x.y.a := x.y.a / 7
x.y.a := x.y.a ^ 2

x.y.a := x.y.a << 10
x.y.a := x.y.a >> 5
