tests/resource/invalid/type/class/reassign_to_unassigned_class_var.mamba
class X
    def z: Int

    def init(self, x: Int) =>
        self.z += 10
